--- a/kaflar/mottaka-kjaramala.html
+++ b/kaflar/mottaka-kjaramala.html
@@ -8,6 +8,8 @@
 </head>
 <body>   
     <h1>Vinnuferli fyrir móttöku kjaramála</h1>
+    <a href="https://einingidja.sharepoint.com/:w:/s/Kjarasvi/ERnSb7hkGKRCqHOw7-iG0nUBbjj_J17hA97H94t2ZElFng?e=4fVuTM" target="_blank">Vinnuferli fyrir móttöku kjaramála</a>
+
     
     <div class="step">
         <h2>Skref 1: Móttaka máls</h2>
