--- a/kaflar/intro.html
+++ b/kaflar/intro.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Velkomin í Gæðahandbókina</h1>
-    
+    <p style="color: red; font-weight: bold;">⚠️ Vinsamlegast athugið: Þetta eru drög í vinnslu og ekki endanleg skjöl.</p>
+
+    <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/EX94BSJRp_VDoqUOV-LU0QQBYFu3lxirmiARQTdco_ERLw?e=TkpbKa', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+    <button onclick="window.open('https://einingidja.sharepoint.com/:f:/s/Kjarasvi/Elh2j7F-1bpDmnTXbWg3Zr4Ba_xUhe4nZt7_fObwAWTMHA?e=J6c8bQ', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">SharePoint mappa með öllum vinnuskjölum</button>
+
+   
     <p>Gæðahandbókin er leiðarvísir fyrir alla þá sem starfa við kjarasvið innan stéttarfélagsins. Hún inniheldur ítarlegar upplýsingar um vinnuferli, gæðatryggingu, skjölun og samskipti við félagsmenn, sem eru grundvöllur faglegra vinnubragða á þessu sviði.</p>
     
     <h2>Tilgangur Gæðahandbókarinnar</h2>
