--- a/kaflar/mottaka-kjaramala.html
+++ b/kaflar/mottaka-kjaramala.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>   
-    <h1>Vinnuferli fyrir móttöku kjaramála</h1>
-    <a href="https://einingidja.sharepoint.com/:w:/s/Kjarasvi/ERnSb7hkGKRCqHOw7-iG0nUBbjj_J17hA97H94t2ZElFng?e=4fVuTM" target="_blank">Vinnuferli fyrir móttöku kjaramála</a>
+    <h1>Móttaka kjaramála</h1>
+ 
+    <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/ERnSb7hkGKRCqHOw7-iG0nUBbjj_J17hA97H94t2ZElFng?e=4fVuTM', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+    <style>
+        button:hover {
+            background-color: #0056b3 !important;
+        }
+    </style>
 
-    
+
+    <p style="color: red; font-weight: bold;">⚠️ Vinsamlegast athugið: Þetta eru drög í vinnslu og ekki endanleg skjöl.</p>
+
+
     <div class="step">
         <h2>Skref 1: Móttaka máls</h2>
         <p><strong>Aðgerð:</strong> Þegar starfsmaður á kjarasviði fær beiðni um aðstoð frá félagsmanni (t.d. í gegnum símtal, tölvupóst eða heimsókn), er fyrsta skrefið að staðfesta móttöku málsins formlega.</p>
