--- a/kaflar/rettarheimildir.html
+++ b/kaflar/rettarheimildir.html
@@ -8,4 +8,15 @@
 </head>
 <body>
     <h1>Réttarheimildir</h1>
-    <h2>Fyrirsögn</h2>
+   
+    <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/EZG2nrH8x9lFqaB50bA3oacByf_G2dNV5kz2qsVLpydLTg?e=Dgyzjr', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+    <style>
+        button:hover {
+            background-color: #0056b3 !important;
+        }
+    </style>
+
+    <h2>Vinnuréttarvefur ASÍ</h2>
+    <p>Alþýðusamband Íslands (ASÍ) heldur úti gagnlegum vinnuréttarvef sem inniheldur ítarlegar upplýsingar um réttindi og skyldur á vinnumarkaði. Þar er að finna upplýsingar um ýmis málefni tengd vinnurétti, kjarasamningum og vinnulöggjöf.</p>
+    <p>Þú getur nálgast vinnuréttarvef ASÍ með því að smella á eftirfarandi hlekk:</p>
+    <p><a href="https://asi.is/vinnurettarvefur/um-vinnurettarvefinn/" target="_blank">Vinnuréttarvefur ASÍ</a></p>
