--- a/kaflar/trunadur-og-personuvernd.html
+++ b/kaflar/trunadur-og-personuvernd.html
@@ -8,11 +8,20 @@
 </head>
 <body>
     <h1>Trúnaður og persónuvernd</h1>
+    <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/EV5zWC-Q-ypOjV5ul8zYO7kBtsX65rBfTQ17ynmYNqNy9Q?e=twuwZK', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+    <style>
+        button:hover {
+            background-color: #0056b3 !important;
+        }
+    </style>
+    <p style="color: red; font-weight: bold;">⚠️ Vinsamlegast athugið: Þetta eru drög í vinnslu og ekki endanleg skjöl.</p>
+
 
     <div class="section">
-        <h2>Mikilvægi trúnaðar</h2>
+    
         <p>Kjaramál innihalda viðkvæmar upplýsingar sem skulu meðhöndla með fyllsta trúnaði. Þessi gögn varða persónulegar upplýsingar félagsmanna sem geta haft veruleg áhrif á þeirra réttindi og hagsmuni.</p>
     </div>
+
 
     <div class="step">
         <h2>Skref 1: Skrifleg staðfesting á trúnaði við móttöku máls</h2>
