--- a/kaflar/urvinnsla-kjaramala.html
+++ b/kaflar/urvinnsla-kjaramala.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Vinnuferli fyrir úrvinnslu kjaramála</h1>
+  <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/Efbj7blZsUVGkmu6vSAz3PUBiH9TlvSKreXGLMHDQ7Z8XQ?e=NZ9hnl', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+  <style>
+      button:hover {
+          background-color: #0056b3 !important;
+      }
+  </style>
+
+<p style="color: red; font-weight: bold;">⚠️ Vinsamlegast athugið: Þetta eru drög í vinnslu og ekki endanleg skjöl.</p>
 
     <div class="case-types">
         <h2>Gerðir mála</h2>
