--- a/kaflar/vinnustadaeftirlit.html
+++ b/kaflar/vinnustadaeftirlit.html
@@ -8,5 +8,110 @@
 </head>
 <body>
     <h1>Vinnustaðaeftirlit</h1>
-    <h2>Fyrirsögn</h2>
-    <li><a href="../apps/snake/snake.html" target="content-frame">Leyni</a></li>
+    <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/EeEWXF3mjyVFnj-dpDCB2RABwL7rRPiDFftdGrhrwT57ig?e=bsDwZ3', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+    <style>
+        button:hover {
+            background-color: #0056b3 !important;
+        }
+    </style>
+    <p style="color: red; font-weight: bold;">⚠️ Vinsamlegast athugið: Þetta eru drög í vinnslu og ekki endanleg skjöl.</p>
+
+    <p>Hér er hlekkur á lög um vinnustaðaskírteini og eftirlit á vinnustöðum:</p>
+    <p><a href="https://www.althingi.is/lagas/nuna/2010042.html" target="_blank">Lög um vinnustaðaskírteini og eftirlit á vinnustöðum</a></p>
+
+
+    <h2>Vinnustaðaeftirlit Einingar-Iðju</h2>
+
+
+    <div class="step">
+        <h3>1. Tilgangur</h3>
+        <p>Þetta skjal lýsir verklagi og markmiðum Einingar-Iðju varðandi vinnustaðaeftirlit, byggt á lögum nr. 42/2010 um vinnustaðaskírteini og eftirlit á vinnustöðum.</p>
+    </div>
+
+    <div class="step">
+        <h3>2. Gildissvið</h3>
+        <p>Skjalið gildir fyrir alla eftirlitsfulltrúa Einingar-Iðju sem sinna vinnustaðaeftirliti.</p>
+    </div>
+
+    <div class="step">
+        <h3>3. Lagalegur grundvöllur</h3>
+        <p>Vinnustaðaeftirlit Einingar-Iðju byggir á lögum nr. 42/2010 um vinnustaðaskírteini og eftirlit á vinnustöðum.</p>
+    </div>
+
+    <div class="step">
+        <h3>4. Markmið</h3>
+        <p>Markmið vinnustaðaeftirlits Einingar-Iðju er að:</p>
+        <ul>
+            <li>Tryggja að atvinnurekendur og starfsmenn fari að gildandi lögum, reglugerðum og kjarasamningum (sbr. 2. gr. laga nr. 42/2010).</li>
+            <li>Vinna gegn svartri atvinnustarfsemi og undirboðum á vinnumarkaði.</li>
+            <li>Efla tengsl Einingar-Iðju við félaga sína.</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <h3>5. Framkvæmd eftirlits</h3>
+        <h4>5.1 Vinnustaðaskírteini</h4>
+        <ul>
+            <li>Eftirlitsfulltrúar skulu ganga úr skugga um að starfsmenn beri vinnustaðaskírteini (sbr. 3. gr. laga nr. 42/2010).</li>
+            <li>Á vinnustaðaskírteini skal koma fram nafn og kennitala atvinnurekanda og starfsmanns, ásamt mynd af starfsmanni.</li>
+        </ul>
+        <h4>5.2 Eftirlitsheimsóknir</h4>
+        <ul>
+            <li>Eftirlitsfulltrúar hafa heimild til að fara í eftirlitsheimsóknir á vinnustaði (sbr. 4. gr. laga nr. 42/2010).</li>
+            <li>Við eftirlitsheimsóknir skal hafa samband við atvinnurekanda eða fulltrúa hans.</li>
+            <li>Eftirlitsfulltrúar skulu bera skírteini við störf sín.</li>
+        </ul>
+        <h4>5.3 Upplýsingaöflun og -miðlun</h4>
+        <ul>
+            <li>Eftirlitsfulltrúar mega senda upplýsingar til viðeigandi yfirvalda (sbr. 3. mgr. 4. gr. laga nr. 42/2010).</li>
+            <li>Trúnaðarskylda gildir um upplýsingar sem fást við eftirlit (sbr. 4. mgr. 4. gr. laga nr. 42/2010).</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <h3>6. Hlutverk vinnustaðaheimsókna</h3>
+        <p>Vinnustaðaheimsóknir gegna mikilvægu hlutverki við að:</p>
+        <ul>
+            <li>Upplýsa launafólk um réttindi og skyldur.</li>
+            <li>Kynna þjónustu Einingar-Iðju.</li>
+            <li>Efla tengsl við félagsmenn, sérstaklega erlenda starfsmenn.</li>
+            <li>Sporna gegn brotastarfsemi á vinnumarkaði.</li>
+            <li>Auka þekkingu á atvinnulífinu og stöðu vinnumarkaðarins.</li>
+            <li>Upplýsa atvinnurekendur um skyldur þeirra.</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <h3>7. Eftirfylgni</h3>
+        <ul>
+            <li>Ef grunur vaknar um brot skal meta hvort tilkynna eigi til viðeigandi yfirvalda (sbr. 5. gr. laga nr. 42/2010).</li>
+            <li>Eftirlitsfulltrúar skulu fylgja verklagsreglum um eftirfylgni mála.</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <h3>8. Þjálfun eftirlitsfulltrúa</h3>
+        <ul>
+            <li>Allir eftirlitsfulltrúar skulu fá viðeigandi þjálfun í framkvæmd eftirlits og þekkja vel til laga nr. 42/2010.</li>
+            <li>Reglulega skal halda upprifjunarnámskeið fyrir eftirlitsfulltrúa.</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <h3>9. Skráning og skýrslugerð</h3>
+        <ul>
+            <li>Allar eftirlitsheimsóknir skulu skráðar í þar til gert kerfi.</li>
+            <li>Mánaðarlega skal taka saman skýrslu um framkvæmd og niðurstöður eftirlits.</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <h3>10. Endurskoðun</h3>
+        <p>Þetta gæðaskjal skal endurskoðað árlega eða þegar breytingar verða á lögum eða kjarasamningum sem varða vinnustaðaeftirlit.</p>
+    </div>
+
+
+
+
+    <!-- Ekkert að sjá hér -->
+    <!-- <li><a href="../apps/snake/snake.html" target="content-frame" style="display:none;">Leyni</a></li> -->
