--- a/kaflar/innheimtumal.html
+++ b/kaflar/innheimtumal.html
@@ -8,11 +8,19 @@
 </head>
 <body>
     <h1>Innheimtumál</h1>
+    <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/EZmOdEFS1VJJiZ5w1wGi9vIBXB1Sh094zrf7zK4TNyc1SQ?e=CqmGTM', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
+    <style>
+        button:hover {
+            background-color: #0056b3 !important;
+        }
+    </style>
+    <p style="color: red; font-weight: bold;">⚠️ Vinsamlegast athugið: Þetta eru drög í vinnslu og ekki endanleg skjöl.</p>
 
     <div class="section">
-        <h3>Ferli Innheimtu<sup><a href="#" onclick="loadReferenceInParent('ref4'); return false;">[4]</a></sup></h3>
+        <h3>Ferli Innheimtu</h3>
         <p>Ferlið við innheimtu vegna vangreiddra launa eða annarra krafna sem byggja á kjarasamningum er mjög skipulegt og fylgir eftirfarandi skrefum.</p>
     </div>
+
 
     <div class="step">
         <h2>Skref 1: Innheimta vegna vangreiddra launa eða annarra krafna</h2>
