--- a/kaflar/urvinnsla-kjaramala.html
+++ b/kaflar/urvinnsla-kjaramala.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <h1>Vinnuferli fyrir úrvinnslu kjaramála</h1>
+    <h1>Úrvinnslu kjaramála</h1>
   <button onclick="window.open('https://einingidja.sharepoint.com/:w:/s/Kjarasvi/Efbj7blZsUVGkmu6vSAz3PUBiH9TlvSKreXGLMHDQ7Z8XQ?e=NZ9hnl', '_blank')" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; transition: background-color 0.3s;">Vinnuskjal á SharePoint</button>
   <style>
       button:hover {
@@ -78,7 +78,7 @@
         </ul>
     </div>
 
-    <div class="references">
+    <div class="step">
         <h2>Réttarheimildir í úrvinnslu</h2>
         <ul>
             <li>Kjarasamningar</li>
