--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
                 <li><a href="kaflar/veikindarettur.html" target="content-frame">7. Veikindaréttur</a></li>
                 <li><a href="kaflar/utlendingamal.html" target="content-frame">8. Útlendingamál</a></li>
                 <li><a href="kaflar/rettarheimildir.html" target="content-frame">9. Helstu réttarheimildir</a></li>
+                <li><a href="kaflar/reiknivel_orlof_des.html" target="content-frame">Reiknivél desember - orlofsuppbót (prufuútgáfa)</a></li>
             </ul>
         </div>
         
