--- a/apps/bonuses/reiknivel_orlof_des.html
+++ b/apps/bonuses/reiknivel_orlof_des.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orlofs- og Desemberuppbót Reiknivél 2024</title>
+    <title>Orlofs- og Desemberuppbót Reiknivél (demó)</title>
     <!-- Flatpickr CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <style>
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="calculator">
-        <h1>Orlofs- og Desemberuppbót Reiknivél 2024</h1>
+        <h1>Orlofs- og Desemberuppbót Reiknivél demó</h1>
         
         <div class="form-group">
             <label for="bonusType">Gerð Uppbótar:</label>
@@ -89,7 +89,7 @@
 
         <div class="form-group">
             <label for="baseAmount">Heildarupphæð (kr):</label>
-            <input type="number" id="baseAmount" value="58000" min="0" step="1000">
+            <input type="number" id="baseAmount" value="60000" min="0" step="1000">
         </div>
 
         <div class="form-group">
