--- a/home.html
+++ b/home.html
@@ -35,7 +35,9 @@
                 <li><a href="kaflar/veikindarettur.html" target="content-frame">7. Veikindaréttur</a></li>
                 <li><a href="kaflar/utlendingamal.html" target="content-frame">8. Útlendingamál</a></li>
                 <li><a href="kaflar/rettarheimildir.html" target="content-frame">9. Helstu réttarheimildir</a></li>
-                <li><a href="kaflar/reiknivel_orlof_des.html" target="content-frame">Reiknivél desember - orlofsuppbót (prufuútgáfa)</a></li>
+                <li><a href="apps/bonuses/reiknivel_orlof_des.html" target="content-frame">Reiknivél desember - orlofsuppbót (prufuútgáfa)</a></li>
+                <li><a href="apps/illness/illnesscalc.html" target="content-frame">Reiknivél veikindaréttur(prufuútgáfa)</a></li>
+
             </ul>
         </div>
         
