--- a/apps/illness/illnesscalc.html
+++ b/apps/illness/illnesscalc.html
@@ -3,39 +3,184 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gæðahandbók</title>
-    <link rel="stylesheet" href="../../styles/style.css">
+    <title>Veikindaréttur Reiknivél</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 700px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #eef2f5;
+        }
+        .calculator {
+            background-color: #f9f9f9;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .calculator h1 {
+            text-align: center;
+            color: #2c5282;
+            margin-bottom: 25px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: #2c5282;
+        }
+        select, input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 5px;
+            border: 1px solid #cbd5e0;
+            border-radius: 5px;
+            box-sizing: border-box;
+            font-size: 1em;
+        }
+        .radio-group {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 5px;
+        }
+        .radio-option {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .radio-option input[type="radio"] {
+            width: auto;
+            margin: 0;
+        }
+        .radio-option label {
+            margin: 0;
+            display: inline;
+        }
+        .input-group {
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+            gap: 10px;
+        }
+        .results {
+            margin-top: 25px;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            border: 1px solid #cbd5e0;
+            display: none;
+        }
+        .results.show {
+            display: block;
+            animation: fadeIn 0.3s ease-in;
+        }
+        .results p {
+            margin: 10px 0;
+            font-size: 1.1em;
+        }
+        .total-days {
+            font-size: 1.4em;
+            font-weight: bold;
+            color: #2c5282;
+        }
+        .calculate-btn {
+            width: 100%;
+            padding: 12px;
+            background-color: #2c5282;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .calculate-btn:hover {
+            background-color: #1a365d;
+        }
+        .error {
+            color: red;
+            font-size: 0.9em;
+            margin-top: 5px;
+        }
+        @media (max-width: 600px) {
+            .calculator {
+                padding: 15px;
+            }
+            .results p {
+                font-size: 1em;
+            }
+            .total-days {
+                font-size: 1.2em;
+            }
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
+<body>
+    <div class="calculator">
+        <h1>Veikindaréttur Reiknivél</h1>
+        
+        <form id="veikindaretturForm">
+            <div class="form-group">
+                <label>Markaður:</label>
+                <div class="radio-group">
+                    <div class="radio-option">
+                        <input type="radio" id="almennur" name="market" value="almennur" required>
+                        <label for="almennur">Almennur</label>
+                    </div>
+                    <div class="radio-option">
+                        <input type="radio" id="opinber" name="market" value="opinber" required>
+                        <label for="opinber">Opinber</label>
+                    </div>
+                </div>
+                <div id="marketError" class="error"></div>
+            </div>
 
-<div id="veikindarettur-reiknivel" class="calculator">
-    <h2>Reiknivél fyrir veikindarétt</h2>
-    <form id="veikindaretturForm">
-        <div class="form-group">
-            <label>Markaður:</label>
-            <div class="radio-group">
-                <input type="radio" id="almennur" name="market" value="almennur" required>
-                <label for="almennur">Almennur</label>
-                <input type="radio" id="opinber" name="market" value="opinber" required>
-                <label for="opinber">Opinber</label>
+            <div class="form-group">
+                <label for="starfstimi">Starfstími:</label>
+                <div class="input-group">
+                    <input type="number" 
+                           id="starfstimi" 
+                           name="starfstimi" 
+                           required 
+                           min="0" 
+                           placeholder="Sláðu inn starfstíma">
+                    <select id="starfstimiType" name="starfstimiType">
+                        <option value="mánuðir">Mánuðir</option>
+                        <option value="ár">Ár</option>
+                    </select>
+                </div>
+                <div id="starfstimiError" class="error"></div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="starfstimi">Starfstími:</label>
-            <div class="input-group">
-                <input type="number" id="starfstimi" name="starfstimi" required min="0">
-                <select id="starfstimiType" name="starfstimiType">
-                    <option value="mánuðir">Mánuðir</option>
-                    <option value="ár">Ár</option>
-                </select>
+
+            <div class="form-group">
+                <label for="notadirDagar">Notaðir veikindadagar síðustu 12 mánuði:</label>
+                <input type="number" 
+                       id="notadirDagar" 
+                       name="notadirDagar" 
+                       required 
+                       min="0" 
+                       placeholder="Sláðu inn fjölda daga">
+                <div id="notadirDagarError" class="error"></div>
             </div>
+
+            <button type="submit" class="calculate-btn">Reikna veikindarétt</button>
+        </form>
+
+        <div id="nidurstada" class="results">
+            <p>Heildar veikindaréttur: <span id="totalDays" class="total-days">0</span> dagar</p>
+            <p>Notaðir dagar: <span id="usedDays">0</span> dagar</p>
+            <p>Eftirstöðvar: <span id="remainingDays" class="total-days">0</span> dagar</p>
+            <p id="additionalInfo"></p>
         </div>
-        <div class="form-group">
-            <label for="notadirDagar">Notaðir veikindadagar síðustu 12 mánuði:</label>
-            <input type="number" id="notadirDagar" name="notadirDagar" required min="0">
-        </div>
-        <button type="submit" class="calculate-btn">Reikna veikindarétt</button>
-    </form>
-    <div id="nidurstada" class="result"></div>
+    </div>
+
     <script src="veikindarettur-reiknivel.js"></script>
-
-</div>
+</body>
+</html>
